release/1.7.5/VERSION.md
# 1.7.5

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.7.5```   |
| Release Time   | ```2014-02-26T09:22:17+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.7.4```   |
| sha1   | ```545510a60f526b9aa8a38f9c0bc7a74235d21675```   |
| size   | ```59675```   |
| total size  | ```112252715```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/545510a60f526b9aa8a38f9c0bc7a74235d21675/1.7.4.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```77aa70ac5054cbf1140b6449b579e950d5050c4a```   |
| size   | ```5225771```   |
| url       | ```https://launcher.mojang.com/v1/objects/77aa70ac5054cbf1140b6449b579e950d5050c4a/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```e1d557b2e31ea881404e41b05ec15c810415e060```   |
| size   | ```9173673```   |
| url       | ```https://launcher.mojang.com/v1/objects/e1d557b2e31ea881404e41b05ec15c810415e060/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |